[gd_scene load_steps=13 format=3 uid="uid://0u70bm8qumdr"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="1_kso5g"]
[ext_resource type="Script" uid="uid://c5jjgbvpum1at" path="res://src/screens/match_screen/match_screen.gd" id="2_m8spm"]
[ext_resource type="PackedScene" uid="uid://bubq3rsb3hm6e" path="res://src/screens/match_screen/match_simulator/match_simulator.tscn" id="3_b3l68"]
[ext_resource type="Script" uid="uid://cnyyowwlb04kl" path="res://src/ui_components/base/defaults/default_button.gd" id="4_fwmog"]
[ext_resource type="LabelSettings" uid="uid://cc2vi4onhgmnw" path="res://theme_base/label/label_settings_bold.tres" id="5_2mnrh"]
[ext_resource type="PackedScene" uid="uid://dvuxwugywbeut" path="res://src/screens/match_screen/penalties_bar/penalties_bar.tscn" id="6_8rfx8"]
[ext_resource type="PackedScene" uid="uid://bc6kfu3avld0" path="res://src/screens/match_screen/statistics/match_stats.tscn" id="7_qx6fv"]
[ext_resource type="PackedScene" uid="uid://5agy8ull675s" path="res://src/screens/match_screen/events/match_events.tscn" id="8_46kqv"]
[ext_resource type="PackedScene" uid="uid://i4nnwgwck615" path="res://src/ui_components/visual_formation/visual_formation.tscn" id="9_0djf7"]
[ext_resource type="PackedScene" uid="uid://bj7f2r54xkpt1" path="res://src/ui_components/visual_formation/players_bar/players_bar.tscn" id="10_poqjf"]
[ext_resource type="StyleBox" uid="uid://p2i8146lydw5" path="res://theme_base/styles/box/box_background_secondary.tres" id="10_rtyvd"]
[ext_resource type="PackedScene" uid="uid://bpvg2vhxml3a1" path="res://src/ui_components/base/confirm_dialog/default_confirm_dialog.tscn" id="11_c2tcg"]

[node name="MatchScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kso5g")
script = ExtResource("2_m8spm")

[node name="MatchSimulator" parent="." instance=ExtResource("3_b3l68")]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Content" type="VBoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TopBar" type="HBoxContainer" parent="Main/Content"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PanelContainer" type="PanelContainer" parent="Main/Content/TopBar"]
layout_mode = 2

[node name="Info" type="HBoxContainer" parent="Main/Content/TopBar/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TimeBar" type="ProgressBar" parent="Main/Content/TopBar/PanelContainer/Info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 32)
layout_mode = 2
max_value = 2400.0
step = 1.0
show_percentage = false

[node name="Time" type="Label" parent="Main/Content/TopBar/PanelContainer/Info/TimeBar"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
text = "00:00"
label_settings = ExtResource("5_2mnrh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HomeColor" type="ColorRect" parent="Main/Content/TopBar/PanelContainer/Info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 30)
layout_mode = 2

[node name="HomeFouls" type="Label" parent="Main/Content/TopBar/PanelContainer/Info"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
tooltip_text = "Fouls commited"
mouse_filter = 0
text = "(0)"
horizontal_alignment = 1

[node name="HomeNameLabel" type="Label" parent="Main/Content/TopBar/PanelContainer/Info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(82, 0)
layout_mode = 2
text = "Home"
label_settings = ExtResource("5_2mnrh")
text_overrun_behavior = 3
ellipsis_char = ""
uppercase = true

[node name="Result" type="Label" parent="Main/Content/TopBar/PanelContainer/Info"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "99:99"
label_settings = ExtResource("5_2mnrh")
horizontal_alignment = 1
uppercase = true

[node name="AwayNameLabel" type="Label" parent="Main/Content/TopBar/PanelContainer/Info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(82, 0)
layout_mode = 2
text = "Away"
label_settings = ExtResource("5_2mnrh")
horizontal_alignment = 2
text_overrun_behavior = 3
ellipsis_char = ""
uppercase = true

[node name="AwayFouls" type="Label" parent="Main/Content/TopBar/PanelContainer/Info"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
tooltip_text = "Fouls commited"
mouse_filter = 0
text = "(0)"
horizontal_alignment = 1

[node name="AwayColor" type="ColorRect" parent="Main/Content/TopBar/PanelContainer/Info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 30)
layout_mode = 2

[node name="Center" type="HBoxContainer" parent="Main/Content/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="OverviewButton" type="Button" parent="Main/Content/TopBar/Center"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Overview"
script = ExtResource("4_fwmog")

[node name="PauseButton" type="Button" parent="Main/Content/TopBar/Center"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Pause"
script = ExtResource("4_fwmog")

[node name="Right" type="HBoxContainer" parent="Main/Content/TopBar"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="Main/Content/TopBar/Right"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Speed" type="HBoxContainer" parent="Main/Content/TopBar/Right/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SlowerButton" type="Button" parent="Main/Content/TopBar/Right/PanelContainer/Speed"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<"
script = ExtResource("4_fwmog")

[node name="SpeedFactor" type="Label" parent="Main/Content/TopBar/Right/PanelContainer/Speed"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Full game"
horizontal_alignment = 1

[node name="FasterButton" type="Button" parent="Main/Content/TopBar/Right/PanelContainer/Speed"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">"
script = ExtResource("4_fwmog")

[node name="SimulateButton" type="Button" parent="Main/Content/TopBar/Right"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Simulate"
script = ExtResource("4_fwmog")

[node name="DashboardButton" type="Button" parent="Main/Content/TopBar/Right"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Dashboard"
script = ExtResource("4_fwmog")

[node name="PenaltiesBar" parent="Main/Content" instance=ExtResource("6_8rfx8")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MainView" type="MarginContainer" parent="Main/Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Views" type="MarginContainer" parent="Main/Content/MainView"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="Main/Content/MainView/Views"]
modulate = Color(1, 1, 1, 0.619608)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/Content/MainView/Views"]
layout_mode = 2

[node name="Log" type="VBoxContainer" parent="Main/Content/MainView/Views/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Formation" parent="Main/Content/MainView/Views/MarginContainer" instance=ExtResource("9_0djf7")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Overview" type="HBoxContainer" parent="Main/Content/MainView/Views/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Stats" parent="Main/Content/MainView/Views/MarginContainer/Overview" instance=ExtResource("7_qx6fv")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6

[node name="Events" parent="Main/Content/MainView/Views/MarginContainer/Overview" instance=ExtResource("8_46kqv")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomBar" type="VBoxContainer" parent="Main/Content"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="PossessBar" type="ProgressBar" parent="Main/Content/BottomBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_styles/background = ExtResource("10_rtyvd")
min_value = 1.0
step = 1.0
value = 50.0
show_percentage = false

[node name="Labels" type="HBoxContainer" parent="Main/Content/BottomBar/PossessBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HomePossessionLabel" type="Label" parent="Main/Content/BottomBar/PossessBar/Labels"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
text = "50%"
horizontal_alignment = 1

[node name="Posession" type="Label" parent="Main/Content/BottomBar/PossessBar/Labels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Possession"
horizontal_alignment = 1

[node name="AwayPossessionLabel" type="Label" parent="Main/Content/BottomBar/PossessBar/Labels"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
text = "50%"
horizontal_alignment = 1

[node name="PlayersBar" parent="Main/Content/BottomBar" instance=ExtResource("10_poqjf")]
unique_name_in_owner = true
layout_mode = 2

[node name="SimulationDialog" parent="." instance=ExtResource("11_c2tcg")]
unique_name_in_owner = true
visible = false
custom_title = "Simulation"
custom_text = "Do you want to simulate the whole match?"
type = 0

[connection signal="action_message" from="MatchSimulator" to="." method="_on_match_simulator_action_message"]
[connection signal="pressed" from="Main/Content/TopBar/Center/OverviewButton" to="." method="_on_overview_button_pressed"]
[connection signal="pressed" from="Main/Content/TopBar/Center/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Main/Content/TopBar/Right/PanelContainer/Speed/SlowerButton" to="." method="_on_slower_button_pressed"]
[connection signal="pressed" from="Main/Content/TopBar/Right/PanelContainer/Speed/FasterButton" to="." method="_on_faster_button_pressed"]
[connection signal="pressed" from="Main/Content/TopBar/Right/SimulateButton" to="." method="_on_simulate_button_pressed"]
[connection signal="pressed" from="Main/Content/TopBar/Right/DashboardButton" to="." method="_on_dashboard_button_pressed"]
[connection signal="change_request" from="Main/Content/MainView/Views/MarginContainer/Formation" to="." method="_on_formation_change_request"]
[connection signal="change_request" from="Main/Content/BottomBar/PlayersBar" to="." method="_on_players_bar_change_request"]
[connection signal="show_formation" from="Main/Content/BottomBar/PlayersBar" to="." method="_on_players_bar_show_formation"]
[connection signal="confirmed" from="SimulationDialog" to="." method="_on_simulation_confirm_dialog_confirmed"]
[connection signal="denied" from="SimulationDialog" to="." method="_on_simulation_dialog_denied"]
